--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "private": true,
   "dependencies": {
+    "d3": "3.5.17",
+    "rd3": "0.6.4",
+    "react": "15.2.1",
+    "react-dom": "15.2.1",
+    "lodash": "4.13.1",
     "todomvc-app-css": "2.0.6",
     "todomvc-common": "1.0.2"
   },
@@ -10,6 +15,7 @@
     "babel-plugin-__coverage__": "11.0.0",
     "babel-preset-es2015-webpack": "6.4.1",
     "babel-preset-es2016": "6.11.0",
+    "babel-preset-react": "6.11.1",
     "babel-preset-stage-2": "6.11.0",
     "chai": "3.5.0",
     "css-loader": "0.23.1",
